--- a/index.html
+++ b/index.html
@@ -5,9 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./assets/image/">
 </head>
 <body>
-  <h2>Murad geldi</h2>  
-    <h1>team leadc shovgu</h1>
+    <!-- Shovgu -->
+    <div class="header">
+        <img src="./assets/image/logo_mobile_black 1.png" alt="">
+        <img src="./assets/image/globe.png" alt="logo">
+        <p></p>
+    </div>
+    
 </body>
 </html>
