added Mahhamad commit

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         <img src="./assets/image/globe.png" alt="logo">
         <p></p>
     </div>
+
+    <!-- Mahammad s area -->
+
+    <h1>Hello everyobne</h1>
     
 </body>
 </html>
