--- a/index.html
+++ b/index.html
@@ -15,6 +15,33 @@
         <img src="./assets/image/globe.png" alt="logo">
         <p></p>
     </div>
-    
+    <!-- Murad -->
+    <footer>
+    <div class="left">
+        <div >
+        <img class="logo_mobile_white" src="./assets/image/logo_mobile_white 1.png" alt="logo_mobile_white">
+        <div class="social-media">
+            <img class="ig" src="./assets/image/noroot(4).png" alt="ig">
+            <img class="fb" src="./assets/image/fb.png" alt="">
+            <img class="vk" src="./assets/image/2568411.png" alt="vk">
+            <img class="wp" src="./assets/image/noroot(2).png" alt="wp">
+        </div>
+        </div>
+
+        <div>
+            <p class="copyright">© Синхронизация, 2020</p>
+        </div>
+    </div>
+    <div class="right">
+        <div class="phone">
+            <div><img class="phone_white" src="./assets/image/phone_white.png" alt="phone"></div>
+            <div><p class="p-phone">+7 (499) 39-146-39</p></div>
+        </div>
+        <div class="mail">
+            <div><img class="mail_white" src="./assets/image/mail_white.png" alt="mail"></div>
+            <div><p class="p-mail">hello@synchronize.ru</p></div>
+        </div>
+    </div>
+    </footer>
 </body>
 </html>
