--- a/index.html
+++ b/index.html
@@ -17,28 +17,27 @@
     </div>
 
     <!-- Mahammad s area -->
-    <div>
+<div>
     <div>
     <h3 class="red1">Формат занятий</h3>
     </div>
-    <div>
-    <div>
+    <div class="flex">
+        <div>
         <h3 class="head1">Вебинары</h3>
+        <p class="blok1">Занятия проходят онлайн<br>
+            в режиме вебинаров<br>
+            c преподавателем</p>
+        </div>
+        <div>
         <h3  class="head2">Доступ навсегда</h3>
+        <p class="blok2">Если вы не успели на вебинар<br> всегда можете посмотреть<br> запись в личном кабинете</p>
+        </div>
+        <div>
         <h3 class="head3">Общение</h3>
-    </div>
-<div>
-    <p class="blok1">Занятия проходят онлайн<br>
-    в режиме вебинаров<br>
-    c преподавателем</p>
-
-    <p class="blok2">Если вы не успели на вебинар<br> всегда можете посмотреть<br> запись в личном кабинете</p>
-
-    <p class="blok3">Вы можете задать вопрос<br>
-преподавателю на занятии</p>
-
-</div>
-    </div>
+        <p class="blok3">Вы можете задать вопрос<br>
+            преподавателю на занятии
+            </p>
+        </div>
     </div>
 <div>
 <div>
