--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Shovgu -->
-    <div class="header">
+    <div class="section-1">
         <img src="./assets/image/logo_mobile_black 1.png" alt="">
         <div class="logo">
             <div class="globe">
@@ -33,9 +33,52 @@
             </div>
             <div class="img">
                 <img class="img-1" src="./assets/image/noroot 1 (1).png" alt="main">
+            </div>
+            <div class="img-3">
                 <img class="img-2" src="./assets/image/Ellipse 1.png" alt="alt">
             </div>
         </div>
+        <div class="third-part">
+            <p>Зритель для меня не потребитель моей продукции, не судья, а соучастник творчества, соавтор. </p>
+            <p class="name">Андрей Тарковский</p>
+        </div>
+    </div>
+    <div class="section-2">
+            <div class="first">
+                <div class="main">
+                    <h1>О курсе</h1>
+                    <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино — нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
+            
+                    <p>На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
+                </div>
+                <div class="image">
+                    <img class="image-4" src="./assets/image/_1 1.png" alt="img">
+                </div>
+                <div class="image-7">
+                    <img class="image-5" src="./assets/image/Ellipse 2.png" alt="img">
+                </div>
+            </div>
+            <div class="second">
+                <div class="image-6">
+                    <img src="./assets/image/photo 1.png">
+                </div>
+                <div class="image-8">
+                    <img src="./assets/image/Ellipse 3.png">
+                </div>
+                <div class="one">
+                    <h3>8 занятий</h3>
+                    <p>Для погружения в кинематограф</p>
+                </div>
+                <div class="two">
+                    <h3>2 часа</h3>
+                    <p>Длительность каждого занятия</p>
+                </div>
+                <div class="three">
+                    <h3>3 недели</h3>
+                    <p>Длительность курса</p>
+                </div>
+            </div>
+    </div>
         
     </div>
 
