--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Shovgu -->
     <div class="section-1">
-        <img src="./assets/image/logo_mobile_black 1.png" alt="">
+        <img class="ilk" src="./assets/image/logo_mobile_black 1.png" alt="">
         <div class="logo">
             <div class="globe">
                 <img class="image-1" src="./assets/image/globe.png" alt="globe">
