--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./assets/image/">
 </head>
+
 <body>
     <!-- Shovgu -->
     <div class="section-1">
@@ -44,82 +46,186 @@
         </div>
     </div>
     <div class="section-2">
-            <div class="first">
-                <div class="main">
-                    <h1>О курсе</h1>
-                    <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино — нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
-            
-                    <p>На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях жанров и рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
-                </div>
-                <div class="image">
-                    <img class="image-4" src="./assets/image/_1 1.png" alt="img">
-                </div>
-                <div class="image-7">
-                    <img class="image-5" src="./assets/image/Ellipse 2.png" alt="img">
-                </div>
+        <div class="first">
+            <div class="main">
+                <h1>О курсе</h1>
+                <p>Порой фильмы устроены сложнее четырёхтомных романов. Но читать книги учат со школы, а смотреть кино —
+                    нет. При этом без подготовки бывает трудно получить от просмотра удовольствие.</p>
+
+                <p>На курсе из 8 занятий научимся быть осознанными зрителями. Познакомимся с этапами кинопроизводства и
+                    узнаем, как смотреть кино глазами сценариста, режиссёра и монтажёра. Разберёмся в особенностях
+                    жанров и рассмотрим важнейшие картины, от «Гражданина Кейна» до «Матрицы».</p>
             </div>
-            <div class="second">
-                <div class="image-6">
-                    <img src="./assets/image/photo 1.png">
-                </div>
-                <div class="image-8">
-                    <img src="./assets/image/Ellipse 3.png">
-                </div>
-                <div class="one">
-                    <h3>8 занятий</h3>
-                    <p>Для погружения в кинематограф</p>
-                </div>
-                <div class="two">
-                    <h3>2 часа</h3>
-                    <p>Длительность каждого занятия</p>
-                </div>
-                <div class="three">
-                    <h3>3 недели</h3>
-                    <p>Длительность курса</p>
-                </div>
+            <div class="image">
+                <img class="image-4" src="./assets/image/_1 1.png" alt="img">
             </div>
+            <div class="image-7">
+                <img class="image-5" src="./assets/image/Ellipse 2.png" alt="img">
+            </div>
+        </div>
+        <div class="second">
+            <div class="image-6">
+                <img src="./assets/image/photo 1.png">
+            </div>
+            <div class="image-8">
+                <img src="./assets/image/Ellipse 3.png">
+            </div>
+            <div class="one">
+                <h3>8 занятий</h3>
+                <p>Для погружения в кинематограф</p>
+            </div>
+            <div class="two">
+                <h3>2 часа</h3>
+                <p>Длительность каждого занятия</p>
+            </div>
+            <div class="three">
+                <h3>3 недели</h3>
+                <p>Длительность курса</p>
+            </div>
+        </div>
     </div>
-        
+
     </div>
 
     <!-- Mahammad s area -->
-<div>
     <div>
-    <h3 class="red1">Формат занятий</h3>
+        <div>
+            <h3 class="red1">Формат занятий</h3>
+        </div>
+        <div class="flex">
+            <div>
+                <h3 class="head1">Вебинары</h3>
+                <p class="blok1">Занятия проходят онлайн<br>
+                    в режиме вебинаров<br>
+                    c преподавателем</p>
+            </div>
+            <div>
+                <h3 class="head2">Доступ навсегда</h3>
+                <p class="blok2">Если вы не успели на вебинар<br> всегда можете посмотреть<br> запись в личном кабинете
+                </p>
+            </div>
+            <div>
+                <h3 class="head3">Общение</h3>
+                <p class="blok3">Вы можете задать вопрос<br>
+                    преподавателю на занятии
+                </p>
+            </div>
+        </div>
+        <div>
+            <div>
+                <h3 class="bas1">Что узнаем</h3>
+            </div>
+            <div>
+                <ul class="bas2">
+                    <li>Кто чем занят в съёмочной группе</li>
+                    <li> Ha какие этапы делится кинопроизводство</li>
+                    <li> Ha какие этапы делится кинопроизводство</li>
+                    <li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить</li>
+                    <li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы</li>
+                    <li>Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров</li>
+                    <li>Как, зная всё это, понимать, o чем фильм</li>
+                </ul>
+            </div>
+        </div>
     </div>
-    <div class="flex">
-        <div>
-        <h3 class="head1">Вебинары</h3>
-        <p class="blok1">Занятия проходят онлайн<br>
-            в режиме вебинаров<br>
-            c преподавателем</p>
+    <h2 class="cedveller">Программа курса</h2>
+
+    <div class="boxes1">
+
+        <div class="box1">
+            <img src="./assets/img2/Rectangle 5.png" alt="img1">
+            <h3>1. Как создают кино</h3>
+            <p>8 сентября 20:00
+                Данила Кузнецов</p>
+
         </div>
-        <div>
-        <h3  class="head2">Доступ навсегда</h3>
-        <p class="blok2">Если вы не успели на вебинар<br> всегда можете посмотреть<br> запись в личном кабинете</p>
+
+        <div class="box2">
+            <img src="./assets/img2/Rectangle 7.png" alt="img2">
+            <h3>2. Взгляд драматурга</h3>
+            <p>10 сентября 20:00
+                Данила Кузнецов</p>
+
         </div>
-        <div>
-        <h3 class="head3">Общение</h3>
-        <p class="blok3">Вы можете задать вопрос<br>
-            преподавателю на занятии
+
+        <div class="box3">
+            <img src="./assets/img2/Rectangle 9.png" alt="img3">
+            <h3>3. Взгляд режиссёра</h3>
+            <p>13 сентября 13:00
+                Данила Кузнецов</p>
+        </div>
+
+    </div>
+
+    <div class="boxes2">
+
+        <div class="box4">
+            <img src="./assets/img2/Rectangle 13.png" alt="img4">
+            <h3>4. Взгляд монтажёра</h3>
+            <p>15 сентября 20:00
+                Данила Кузнецов</p>
+        </div>
+
+        <div class="box5">
+            <img src="./assets/img2/Rectangle 14.png" alt="img5">
+            <h3>5. Жанры в кино</h3>
+            <p>17 сентября 20:00
+                Данила Кузнецов</p>
+        </div>
+
+        <div class="box6">
+            <img src="./assets/img2/Rectangle 15.png" alt="img6">
+            <h3>6. Язык кино. Семинар</h3>
+            <p>20 сентября 13:00
+                Данила Кузнецов</p>
+
+        </div>
+
+    </div>
+
+    <div class="boxes3">
+
+        <div class="box7">
+            <img src="./assets/img2/Rectangle 19.png" alt="img7">
+            <h3>7. Взгляд кинокритика</h3>
+            <p>21 сентября 19:00
+                Дмитрий Скворцов</p>
+
+        </div>
+
+        <div class="box8">
+            <img src="./assets/img2/Rectangle 20.png" alt="img8">
+            <h3>8. Осознанный зритель.
+                Семинар</h3>
+            <p>22 сентября 19:00
+                Дмитрий Скворцов</p>
+
+        </div>
+
+    </div>
+
+    <div class="bozhisse">
+        <h2>Курс прошло уже 1616 человек</h2>
+        <div class="bozunichi">
+            <p> Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
+                лекторов и демонстрации примеров. А наличие домашних заданий позволяет закрепить все полученные знания
+                на
+                практике. Теперь другими глазами смотрю фильмы, считываю не только сюжет , но и могу оценить работу
+                режиссера, оператора, монтажера и т.д. Спасибо!
             </p>
+            <div class="fotoandfacebook">
+                <div><img class="portre" src="./assets/img2/1 9.png" alt="foto"></div>
+
+                <div class="FB">
+                    <p>Екатерина Палехова</p>
+                    <img src="./assets/img2/fb_2 1.png" alt="FB">
+                </div>
+
+            </div>
+
         </div>
+
     </div>
-<div>
-<div>
-    <h3 class="bas1">Что узнаем</h3>
-</div>
-<div>
-    <ul class="bas2">
-<li>Кто чем занят в съёмочной группе</li>
-<li> Ha какие этапы делится кинопроизводство</li>
-<li> Ha какие этапы делится кинопроизводство</li>
-<li>Какими методами режиссёры заставляют нас смеяться, плакать и грустить</li>
-<li>Как построение кадра, музыка и свет помогают считывать заложенные в фильм смыслы</li>
-<li>Какие жанры есть в кино и как от них зависит работа операторов, осветителей и монтажёров</li>
-<li>Как, зная всё это, понимать, o чем фильм</li>
-    </ul>
-</div>
-</div>
 </body>
+
 </html>
