--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
             </div>
         </div>
     </div>
+    <!-- Tural -->
     <h2 class="cedveller">Программа курса</h2>
 
     <div class="boxes1">
