--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
 
     </div>
 
-    <div class="bozhisse">
+    v class="bozhisse">
         <h2>Курс прошло уже 1616 человек</h2>
         <div class="bozunichi">
             <p> Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
@@ -225,7 +225,7 @@
 
         </div>
 
-    </div>
+    </div><di
 <!-- Murad -->
 
 <div class="price-and-date">
