tablet mode completed

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         </div>
         <div class="second">
             <div class="image-6">
-                <img src="./assets/image/photo 1.png">
+                <img class="photo-1" src="./assets/image/photo 1.png">
             </div>
             <div class="image-8">
-                <img src="./assets/image/Ellipse 3.png">
+                <img class="photo-2" src="./assets/image/Ellipse 3.png">
             </div>
             <div class="one">
                 <h3>8 занятий</h3>
