--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
     <!-- Tural -->
     <h2 class="cedveller">Программа курса</h2>
-
+    <div class="bloklar">
     <div class="allboxes">
 
         <div class="box1">
@@ -195,13 +195,6 @@
 
         </div>
     </div>
-
-
-
-
-
-
-
     </div>
 
 
