--- a/index.html
+++ b/index.html
@@ -84,10 +84,9 @@
             </div>
         </div>
     </div>
+    <!-- Shovgu end -->
 
-    </div>
-
-    <!-- Mahammad s area -->
+    <!-- Mahammad -->
     <div>
         <div>
             <h3 class="red1">Формат занятий</h3>
@@ -128,79 +127,65 @@
             </div>
         </div>
     </div>
+    <!-- Mahammad end -->
+
     <!-- Tural -->
     <h2 class="cedveller">Программа курса</h2>
     <div class="bloklar">
-    <div class="allboxes">
-
-
+        <div class="allboxes">
             <div class="box1">
                 <img src="./assets/img2/Rectangle 5.png" alt="img1">
                 <h3>1. Как создают кино</h3>
                 <p>8 сентября 20:00
                     Данила Кузнецов</p>
-
-
             </div>
-
             <div class="box2">
                 <img src="./assets/img2/Rectangle 7.png" alt="img2">
                 <h3>2. Взгляд драматурга</h3>
                 <p>10 сентября 20:00
                     Данила Кузнецов</p>
-
             </div>
-
             <div class="box3">
                 <img src="./assets/img2/Rectangle 9.png" alt="img3">
                 <h3>3. Взгляд режиссёра</h3>
                 <p>13 сентября 13:00
                     Данила Кузнецов</p>
             </div>
-
             <div class="box4">
                 <img src="./assets/img2/Rectangle 13.png" alt="img4">
                 <h3>4. Взгляд монтажёра</h3>
                 <p>15 сентября 20:00
                     Данила Кузнецов</p>
             </div>
-
             <div class="box5">
                 <img src="./assets/img2/Rectangle 14.png" alt="img5">
                 <h3>5. Жанры в кино</h3>
                 <p>17 сентября 20:00
                     Данила Кузнецов</p>
             </div>
-
             <div class="box6">
                 <img src="./assets/img2/Rectangle 15.png" alt="img6">
                 <h3>6. Язык кино. Семинар</h3>
                 <p>20 сентября 13:00
                     Данила Кузнецов</p>
-
             </div>
-
             <div class="box7">
                 <img src="./assets/img2/Rectangle 19.png" alt="img7">
                 <h3>7. Взгляд кинокритика</h3>
                 <p>21 сентября 19:00
                     Дмитрий Скворцов</p>
-
             </div>
-
             <div class="box8">
                 <img src="./assets/img2/Rectangle 20.png" alt="img8">
                 <h3>8. Осознанный зритель.
                     Семинар</h3>
                 <p>22 сентября 19:00
                     Дмитрий Скворцов</p>
-
             </div>
         </div>
     </div>
 
     <div class="bozhisse">
-
         <h2>Курс прошло уже 1616 человек</h2>
         <div class="bozunichi">
             <p> Курс профессионально подготовлен, изложение материала весьма доступное, благодаря прекрасному изложению
@@ -211,49 +196,39 @@
             </p>
             <div class="fotoandfacebook">
                 <div><img class="portre" src="./assets/img2/1 9.png" alt="foto"></div>
-
                 <div class="FB">
                     <p>Екатерина Палехова</p>
                     <img src="./assets/img2/fb_2 1.png" alt="FB">
                 </div>
-
             </div>
-
         </div>
-
-
     </div>
-    <!-- Murad -->
+    <!-- Tural end -->
 
+    <!-- Murad -->
     <div class="price-and-date">
         <div class="frame">
-
             <h2 class="date">Начало курса — 8 сентября</h2>
-
             <div class="qiymet">
                 <p class="price">Стоимость</p>
             </div>
             <div class="qiymet-rubl">
                 <p class="price-rubl">3900 руб.</p>
             </div>
-
             <div class="aboute">
                 <div class="about">
                     <p class="price">Для любого уровня</p>
                     <p class="small-size">Курс подходит и тем, кто начинает «с нуля», и тем, кто хочет упорядочить
                         имеющиеся знания.</p>
                 </div>
-
                 <div class="about">
                     <p class="price">Проходите сейчас</p>
                     <p class="small-size">Если вы не успели на вебинар, всегда можете посмотреть запись в личном
                         кабинете</p>
                 </div>
-
             </div>
         </div>
     </div>
-
 
     <footer>
         <div class="left">
@@ -266,7 +241,6 @@
                     <img class="wp" src="./assets/image/noroot(2).png" alt="wp">
                 </div>
             </div>
-
             <div>
                 <p class="copyright">© Синхронизация, 2020</p>
             </div>
@@ -286,6 +260,6 @@
             </div>
         </div>
     </footer>
+    <!-- Murad end -->
 </body>
-
 </html>
